hphp/test/slow/parser/hh-reserved-name-void-2.php.expectf
Fatal error: Cannot use `Void` as a type name as it is reserved in %s on line 4
